# opencl-examples

./: .gitignore  CMakeLists.txt  README.md  kernel.cl
src/: hello_opencl_amd.cpp  hello_opencl_cpu.cpp  hello_opencl_mesa.cpp  hello_opencl_mesa_cpu.cpp  hello_opencl_mesa_gpu.cpp  hello_opencl_nvidia.cpp
